service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fpm-react-service
spec:
  selector:
    app: fpm-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
