ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fpm-react-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fpm-react-service
                port:
                  number: 80
